@@ -15,6 +15,7 @@ Changes in 2.0.3-alpha:
  o Fix a rare crash bug in evdns.
  o Have bufferevent_socket_connect() with no arguments put a bufferevent into connecting mode.
  o Support sendfile on Solaris: patch from Caitlin Mercer.
+ o New functions to explicitly reference a socket used by an evhttp object. Patches from David Reiss.
 
 
 Changes in 2.0.2-alpha:
